--- a/pdfjs.cabal
+++ b/pdfjs.cabal
@@ -20,15 +20,15 @@ library
                      
   -- other-modules:
   -- other-extensions:
-  build-depends:       base         >=4.11   && <4.13
-                     , lens         >= 4.17  && < 4.18
-                     , aeson        >= 1.4   && < 1.5
-                     , bytestring   >= 0.10  && < 0.11
-                     , data-default >= 0.7   && < 0.8
-                     , file-embed   >= 0.011 && < 0.1
-                     , ghcjs-dom    >= 0.9.4 && < 0.10
-                     , jsaddle      >= 0.9.7 && < 0.10
-                     , text         >= 1.2.3 && < 1.3
+  build-depends:       base         >=4.11    && <4.13
+                     , lens         >= 4.17   && < 4.18
+                     , aeson        >= 1.4    && < 1.5
+                     , bytestring   >= 0.10   && < 0.11
+                     , data-default >= 0.7    && < 0.8
+                     , file-embed   >= 0.0.11 && < 0.1
+                     , ghcjs-dom    >= 0.9.4  && < 0.10
+                     , jsaddle      >= 0.9.7  && < 0.10
+                     , text         >= 1.2.3  && < 1.3
                      , reflex-dom-core
   if !impl(ghcjs)
     build-depends: jsaddle-warp
@@ -40,4 +40,4 @@ executable demo
   main-is: Demo.hs
   hs-source-dirs: exec
   default-language: Haskell2010
-  build-depends: base, pdfjs, ghcjs-dom, reflex-dom
+  build-depends: base, pdfjs, ghcjs-dom, jsaddle, reflex-dom, jsaddle-warp
