--- a/pdfjs.cabal
+++ b/pdfjs.cabal
@@ -13,11 +13,13 @@ maintainer:          imalsogreg@gmail.com
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
+flag Demo
+  description: Enable demo
+  default: False
+
 library
   exposed-modules: GHCJS.DOM.PDF
-  js-sources:
-                     lib/pdf.js
-                     
+
   -- other-modules:
   -- other-extensions:
   build-depends:       base         >=4.11    && <4.13
@@ -25,19 +27,34 @@ library
                      , aeson        >= 1.4    && < 1.5
                      , bytestring   >= 0.10   && < 0.11
                      , data-default >= 0.7    && < 0.8
-                     , file-embed   >= 0.0.11 && < 0.1
                      , ghcjs-dom    >= 0.9.4  && < 0.10
                      , jsaddle      >= 0.9.7  && < 0.10
                      , text         >= 1.2.3  && < 1.3
                      , reflex-dom-core
-  if !impl(ghcjs)
-    build-depends: jsaddle-warp
-  
+
   hs-source-dirs:      src
   default-language:    Haskell2010
 
 executable demo
+  if flag(Demo)
+     buildable: True
+  else
+     buildable: False
   main-is: Demo.hs
   hs-source-dirs: exec
   default-language: Haskell2010
-  build-depends: base, pdfjs, ghcjs-dom, jsaddle, reflex-dom, jsaddle-warp
+  build-depends:
+      base
+    , pdfjs
+    , data-default
+    , bytestring
+    , base64-bytestring
+    , ghcjs-dom
+    , jsaddle
+    , reflex-dom
+    , text
+  if !impl(ghcjs)
+    build-depends:
+      jsaddle-warp
+      , jsaddle-webkit2gtk
+      , file-embed
